<resources>
    <string name="app_name" translatable="false">PeakAR</string>
    <string name="mountain_info" translatable="false">Mont Blanc - Monte Bianco lat: 45.8325 lon: 6.8641666666667 alt: 4810 <br /><br />
                                 Dent du Geant lat:45.86355980599387 lon:6.951348205683087 alt: 4013<br /><br />
                                 Aiguille du plan lat:45.891667 lon:6.907222 alt: 3673<br /><br />
                                 Pointe de Lapaz lat:45.920774986207014 lon:6.812914656881065 alt: 3660</string>
    <string name="title_activity_main_menu" translatable="false">MainMenuActivity</string>
    <string name="start_button">Start Peak AR</string>
    <string name="collection_button">Collection</string>
    <string name="challenge_button" translatable="false">Challenge</string>
    <string name="ranking_button">Ranking</string>
    <string name="gallery_button">Gallery</string>
    <string name="map_button">Map</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="friend_removed">is no longer your friend.</string>
    <string name="header_position" translatable="false">Pos</string>
    <string name="header_username">Username</string>
    <string name="header_points">Points</string>
    <string name="separator" translatable="false">Uncollected</string>
    <string name="description_back_button" translatable="false">Back Button</string>
    <string name="description_profile_button" translatable="false">Profile Button</string>
    <string name="description_settings_button" translatable="false">Settings Button</string>
    <string name="description_gallery_button" translatable="false">Gallery Button</string>
    <string name="description_camera_button" translatable="false">Camera Button</string>
    <string name="description_map_button" translatable="false">Map Button</string>
    <string name="description_social_button" translatable="false">Social Button</string>
    <string name="description_menu_pointer" translatable="false">Menu Pointer</string>
    <string name="description_icon" translatable="false">Peak AR Icon</string>
    <string name="description_collected_image" translatable="false">Photo over collected mountain</string>
    <string name="description_gallery_image" translatable="false">Gallery image</string>
    <string name="description_gallery_fullscreen_image" translatable="false">Gallery fullscreen image</string>
    <string name="description_dark_green_line" translatable="false">Dark green line</string>
    <string name="title_activity_init" translatable="false">initActivity</string>
    <string name="points__mountain_category">Points:</string>
    <string name="height_mountain_category">Height:</string>
    <string name="position_mountain_category">Position:</string>
    <string name="pictureTakenToast">Picture saved at: file:///storage/emulated/0/Android/media/ch.epfl.sdp.peakar/</string>
    <string name="pictureSavedFailed">Failed to take picture:</string>
    <string name="pictureSavedSuccessfully">Picture saved at:</string>
    <string name="buttonChangeDisplayModePOI" translatable="false">Change displaying of POIs in sight</string>
    <string name="lineOfSightNotDownloaded">Line of sight downlaod is not yet finished, please wait.</string>
    <string name="button_used_to_take_a_picture" translatable="false">Button used to take a picture</string>
    <string name="marker_altitude">Altitude: %s m</string>
    <string name="buttonGetUserLoc" translatable="false">Get user location</string>
    <string name="toast_no_account">You are not logged in: no markers can be displayed</string>
    <string name="empty_gallery" translatable="false">Empty Gallery</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="score_display" translatable="true">Score: %s</string>
    <string name="empty_collection" translatable="false">Empty Collection</string>
    <string name="empty_collection_not_registered" translatable="false">Please, set your username</string>
    <string name="height_display" translatable="false">%s m</string>
    <string name="points_display" translatable="true">Points: %s</string>
    <string name="date_display" translatable="true">Date: %s</string>
    <string name="position_display" translatable="true">Position: (1%.2f, 2%.2f) </string>
    <string name="notStartedStart_display" translatable="false">Start: Waiting for users to join...</string>
    <string name="notStartedFinish_display" translatable="false">Finish: Waiting for users to join...</string>
    <string name="startTime_display" translatable="false">Start: %s</string>
    <string name="finishTime_display" translatable="false">Finish: %s</string>
    <string name="achieved_points" translatable="false">Achieved: %d pts</string>
    <string name="remainingTime_display" translatable="false">Remaining: %s</string>
    <string name="enrolledUser_display" translatable="false">Enrolled users: %d</string>
    <string name="challenge_join" translatable="false">JOIN</string>
    <string name="choose_challenge_duration" translatable="false">Choose challenge duration</string>
    <string name="challenge_points" translatable="false">pts</string>
    <string name="challenge_finished" translatable="false">Finished!</string>
    <string name="toast_challenge_name" translatable="false">Challenge name must contain between 3 and 25 characters</string>
    <string name="enter_challenge_name" translatable="false">Enter challenge name</string>
    <string name="cancel_button" translatable="false">Cancel</string>
    <string name="ok_button" translatable="false">OK</string>
    <string-array name="challenge_duration">
        <item>1 day</item>
        <item>2 days</item>
        <item>5 days</item>
        <item>7 days</item>
        <item>14 days</item>
    </string-array>
    <string name="search_username_hint" translatable="true">Search Username</string>
    <string name="rank_display" translatable="true">Rank: %s</string>
    <string name="switch_all" translatable="true">All</string>
    <string name="switch_friends" translatable="true">Friends</string>
    <string name="empty_friends" translatable="true">No Friends</string>
    <string name="general_header">General</string>
    <string name="language_header">Language preference</string>
    <string name="storage_header">Storage</string>
    <string name="camera_header">Camera</string>
    <string name="display_pois_title">Select displayed mountains</string>
    <string name="filter_pois_title">Filter mountains</string>
    <string name="display_dev_options">Display developer options</string>
    <string name="displayPOIs_key" translatable="false">display_pois_preference</string>
    <string name="filterPOIs_key" translatable="false">filter_pois</string>
    <string name="devOptions_key" translatable="false">developer_options</string>
    <string name="displayCompass_key" translatable="false">display_compass_preference</string>
    <string name="displayCompass_title">Display compass</string>
    <string name="language_title">Language</string>
    <string name="range_title">Discovery distance</string>
    <string name="range_summary">Maximum distance used for peak detection</string>
    <string name="measSys_title">Measuring system</string>
    <string name="night_mode_title">Night mode</string>
    <string name="offline_mode_title">Offline mode</string>
    <string name="offline_mode_on_toast">You are now in offline mode!</string>
    <string name="offline_mode_off_toast">Back online!</string>
    <string name="caching_title">Allow caching</string>
    <string name="caching_summary">Use device storage to cache application data. Enabling this options increase the speed of the application.</string>
    <string name="measSys_key" translatable="false">measSys_preference</string>
    <string name="night_mode_key" translatable="false">night_mode_preference</string>
    <string name="offline_mode_key" translatable="false">offline_mode_preference</string>
    <string name="range_key" translatable="false">range_preference</string>
    <string name="language_key" translatable="false">language_preference</string>
    <string name="disable_caching_key" translatable="false">disable_caching</string>
    <string name="offline_mode_summary">Opens the editor to select an area to download. This allows the application to work without internet connection</string>
    <string name="permission_rationale_title">Permissions are needed!</string>
    <string name="permission_rationale_message">Camera permission is needed to open the camera-preview,         location permission is needed to display the surrounding peaks, write and read external storage         is needed to save and read the saved mountains and pictures so please, allow it!</string>
    <string name="camera_request_title">Camera permission required!</string>
    <string name="camera_request_body">Camera permission is required to be able to use the camera-preview.</string>
    <string name="offline_mode_button" translatable="false">Download Content</string>
    <string name="download_running" translatable="false">Download still running</string>
    <string name="setUsername">You need to first set a username to save the discovered peaks!</string>
    <string name="outsideOfDownloadedBox">You are in offline mode and outside of your downloaded area. Please turn off the offline mode on the settings to use the application.</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_collections">Collections</string>
    <string name="toolbar_rankings">Rankings</string>
    <string name="toolbar_gallery">Gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>