<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">
        <ListPreference
            android:defaultValue="third_range"
            android:dialogIcon="@drawable/ic_baseline_distance_24"
            android:entries="@array/range_entries"
            android:entryValues="@array/range_values"
            android:icon="@drawable/ic_baseline_distance_24"
            android:key="@string/range_key"
            android:title="@string/range_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="siSystem"
            android:dialogIcon="@drawable/ic_baseline_moving_24"
            android:entries="@array/measSys_entries"
            android:entryValues="@array/measSys_values"
            android:icon="@drawable/ic_baseline_moving_24"
            android:key="@string/measSys_key"
            android:title="@string/measSys_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_nightlight_24"
            android:key="@string/night_mode_key"
            android:title="@string/night_mode_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_signal_cellular_off_24"
            android:key="@string/offline_mode_key"
            android:summary="@string/offline_mode_summary"
            android:title="@string/offline_mode_title" />
        android:icon="@drawable/ic_baseline_signal_cellular_off_24"/>

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_developer_options"
            android:key="@string/devOptions_key"
            android:title="@string/display_dev_options" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/camera_header">
        <ListPreference
            android:defaultValue="0"
            android:dialogIcon="@drawable/ic_line_of_sight_camera"
            android:entries="@array/displayPOIs_entries"
            android:entryValues="@array/displayPOIs_values"
            android:icon="@drawable/ic_line_of_sight_camera"
            android:key="@string/displayPOIs_key"
            android:title="@string/display_pois_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_filter_pois_camera"
            android:key="@string/filterPOIs_key"
            android:title="@string/filter_pois_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_compass_settings"
            android:key="@string/displayCompass_key"
            android:title="@string/displayCompass_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language_header">

        <ListPreference
            android:defaultValue="english"
            android:dialogIcon="@drawable/ic_baseline_language_24"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:icon="@drawable/ic_baseline_language_24"
            android:key="@string/language_key"
            android:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/storage_header">

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_baseline_storage_24"
            android:key="@string/disable_caching_key"
            android:summary="@string/caching_summary"
            android:title="@string/caching_title" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>