<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <!-- Temp Camera, TODO Replace with real camera -->
    <ImageView
        android:id="@+id/tempCamera"
        android:layout_width="938dp"
        android:layout_height="1106dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/temp_camera"
        android:contentDescription="@null" />

    <!-- Back Icon button -->
    <ImageButton
        android:id="@+id/cameraBackButton"
        style="@style/IconButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:onClick="backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="@string/description_back_button" />

    <!-- Map Icon Button -->
    <ImageButton
        android:id="@+id/mapButton"
        style="@style/IconButton"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="mapButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_map"
        android:contentDescription="@string/description_map_button"/>

    <!-- Camera button -->
    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:onClick="cameraButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/iconcircle"
        app:srcCompat="@drawable/ic_camera"
        android:contentDescription="@string/description_camera_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>