<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RankingsActivity">

    <!-- Toolbar -->
    <include layout="@layout/toolbar" />

    <!-- Rankings Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/LightBlue"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Position -->
            <TextView
                android:id="@+id/header_position"
                style="@style/SmallText.LightGrey"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/header_position" />

            <!-- Username -->
            <TextView
                android:id="@+id/header_username"
                style="@style/SmallText.LightGrey"
                android:layout_width="235dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:text="@string/header_username" />

            <!-- Points -->
            <TextView
                android:id="@+id/header_points"
                style="@style/SmallText.LightGrey"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/header_points" />

        </LinearLayout>

        <ListView
            android:id="@+id/rankings_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>