<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MountainActivity">

    <!-- Toolbar -->
    <include layout="@layout/toolbar"/>

    <!-- Info text container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <!-- Points -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/LargeDarkGreenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points__mountain_category" />

            <TextView
                android:id="@+id/pointText"
                style="@style/LargeDarkGreenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120" />
        </LinearLayout>

        <!-- Height -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/LargeDarkGreenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_mountain_category" />

            <TextView
                android:id="@+id/heightText"
                style="@style/LargeDarkGreenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3,210m" />
        </LinearLayout>

        <!-- Position -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/LargeDarkGreenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_mountain_category" />

            <TextView
                android:id="@+id/positionText"
                style="@style/LargeDarkGreenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(120, 380)" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>